Fix am-stuh-dam image not showing on desktop

--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -283,7 +283,7 @@
       display: flex;
       justify-content: flex-end;
       flex-direction: column;
-      flex-basis: 65%;
+      flex-basis: 55%;
       padding-right: 90px;
       flex-shrink: 0;
 
@@ -320,7 +320,8 @@
       justify-content: flex-end;
       flex-grow: 1;
       position: relative;
-      height: 100%;
+      // height: 500px;
+      width: 100%;
 
       @media (max-width: $screen-lg) {
         height: 50vh;
